--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
- <embed src="https://shresthaprayush10.github.io/budget/Budget 2020.pdf" width="100%" height="1000px"/>
+ <embed src="https://shresthaprayush10.github.io/budget/Budget_2020.pdf" width="100%" height="1000px"/>
